--- a/RealTimeObjectDetection/Tutorial.ipynb
+++ b/RealTimeObjectDetection/Tutorial.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,11 +177,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'model': ssd {\n",
+       "   num_classes: 13\n",
+       "   image_resizer {\n",
+       "     fixed_shape_resizer {\n",
+       "       height: 320\n",
+       "       width: 320\n",
+       "     }\n",
+       "   }\n",
+       "   feature_extractor {\n",
+       "     type: \"ssd_mobilenet_v2_fpn_keras\"\n",
+       "     depth_multiplier: 1.0\n",
+       "     min_depth: 16\n",
+       "     conv_hyperparams {\n",
+       "       regularizer {\n",
+       "         l2_regularizer {\n",
+       "           weight: 3.9999998989515007e-05\n",
+       "         }\n",
+       "       }\n",
+       "       initializer {\n",
+       "         random_normal_initializer {\n",
+       "           mean: 0.0\n",
+       "           stddev: 0.009999999776482582\n",
+       "         }\n",
+       "       }\n",
+       "       activation: RELU_6\n",
+       "       batch_norm {\n",
+       "         decay: 0.996999979019165\n",
+       "         scale: true\n",
+       "         epsilon: 0.0010000000474974513\n",
+       "       }\n",
+       "     }\n",
+       "     use_depthwise: true\n",
+       "     override_base_feature_extractor_hyperparams: true\n",
+       "     fpn {\n",
+       "       min_level: 3\n",
+       "       max_level: 7\n",
+       "       additional_layer_depth: 128\n",
+       "     }\n",
+       "   }\n",
+       "   box_coder {\n",
+       "     faster_rcnn_box_coder {\n",
+       "       y_scale: 10.0\n",
+       "       x_scale: 10.0\n",
+       "       height_scale: 5.0\n",
+       "       width_scale: 5.0\n",
+       "     }\n",
+       "   }\n",
+       "   matcher {\n",
+       "     argmax_matcher {\n",
+       "       matched_threshold: 0.5\n",
+       "       unmatched_threshold: 0.5\n",
+       "       ignore_thresholds: false\n",
+       "       negatives_lower_than_unmatched: true\n",
+       "       force_match_for_each_row: true\n",
+       "       use_matmul_gather: true\n",
+       "     }\n",
+       "   }\n",
+       "   similarity_calculator {\n",
+       "     iou_similarity {\n",
+       "     }\n",
+       "   }\n",
+       "   box_predictor {\n",
+       "     weight_shared_convolutional_box_predictor {\n",
+       "       conv_hyperparams {\n",
+       "         regularizer {\n",
+       "           l2_regularizer {\n",
+       "             weight: 3.9999998989515007e-05\n",
+       "           }\n",
+       "         }\n",
+       "         initializer {\n",
+       "           random_normal_initializer {\n",
+       "             mean: 0.0\n",
+       "             stddev: 0.009999999776482582\n",
+       "           }\n",
+       "         }\n",
+       "         activation: RELU_6\n",
+       "         batch_norm {\n",
+       "           decay: 0.996999979019165\n",
+       "           scale: true\n",
+       "           epsilon: 0.0010000000474974513\n",
+       "         }\n",
+       "       }\n",
+       "       depth: 128\n",
+       "       num_layers_before_predictor: 4\n",
+       "       kernel_size: 3\n",
+       "       class_prediction_bias_init: -4.599999904632568\n",
+       "       share_prediction_tower: true\n",
+       "       use_depthwise: true\n",
+       "     }\n",
+       "   }\n",
+       "   anchor_generator {\n",
+       "     multiscale_anchor_generator {\n",
+       "       min_level: 3\n",
+       "       max_level: 7\n",
+       "       anchor_scale: 4.0\n",
+       "       aspect_ratios: 1.0\n",
+       "       aspect_ratios: 2.0\n",
+       "       aspect_ratios: 0.5\n",
+       "       scales_per_octave: 2\n",
+       "     }\n",
+       "   }\n",
+       "   post_processing {\n",
+       "     batch_non_max_suppression {\n",
+       "       score_threshold: 9.99999993922529e-09\n",
+       "       iou_threshold: 0.6000000238418579\n",
+       "       max_detections_per_class: 100\n",
+       "       max_total_detections: 100\n",
+       "       use_static_shapes: false\n",
+       "     }\n",
+       "     score_converter: SIGMOID\n",
+       "   }\n",
+       "   normalize_loss_by_num_matches: true\n",
+       "   loss {\n",
+       "     localization_loss {\n",
+       "       weighted_smooth_l1 {\n",
+       "       }\n",
+       "     }\n",
+       "     classification_loss {\n",
+       "       weighted_sigmoid_focal {\n",
+       "         gamma: 2.0\n",
+       "         alpha: 0.25\n",
+       "       }\n",
+       "     }\n",
+       "     classification_weight: 1.0\n",
+       "     localization_weight: 1.0\n",
+       "   }\n",
+       "   encode_background_as_zeros: true\n",
+       "   normalize_loc_loss_by_codesize: true\n",
+       "   inplace_batchnorm_update: true\n",
+       "   freeze_batchnorm: false\n",
+       " },\n",
+       " 'train_config': batch_size: 4\n",
+       " data_augmentation_options {\n",
+       "   random_horizontal_flip {\n",
+       "   }\n",
+       " }\n",
+       " data_augmentation_options {\n",
+       "   random_crop_image {\n",
+       "     min_object_covered: 0.0\n",
+       "     min_aspect_ratio: 0.75\n",
+       "     max_aspect_ratio: 3.0\n",
+       "     min_area: 0.75\n",
+       "     max_area: 1.0\n",
+       "     overlap_thresh: 0.0\n",
+       "   }\n",
+       " }\n",
+       " sync_replicas: true\n",
+       " optimizer {\n",
+       "   momentum_optimizer {\n",
+       "     learning_rate {\n",
+       "       cosine_decay_learning_rate {\n",
+       "         learning_rate_base: 0.07999999821186066\n",
+       "         total_steps: 50000\n",
+       "         warmup_learning_rate: 0.026666000485420227\n",
+       "         warmup_steps: 1000\n",
+       "       }\n",
+       "     }\n",
+       "     momentum_optimizer_value: 0.8999999761581421\n",
+       "   }\n",
+       "   use_moving_average: false\n",
+       " }\n",
+       " fine_tune_checkpoint: \"Tensorflow/workspace/pre-trained-models/ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/ckpt-0\"\n",
+       " num_steps: 50000\n",
+       " startup_delay_steps: 0.0\n",
+       " replicas_to_aggregate: 8\n",
+       " max_number_of_boxes: 100\n",
+       " unpad_groundtruth_tensors: false\n",
+       " fine_tune_checkpoint_type: \"detection\"\n",
+       " fine_tune_checkpoint_version: V2,\n",
+       " 'train_input_config': label_map_path: \"Tensorflow/workspace/annotations/label_map.pbtxt\"\n",
+       " tf_record_input_reader {\n",
+       "   input_path: \"Tensorflow/workspace/annotations/train.record\"\n",
+       " },\n",
+       " 'eval_config': metrics_set: \"coco_detection_metrics\"\n",
+       " use_moving_averages: false,\n",
+       " 'eval_input_configs': [label_map_path: \"Tensorflow/workspace/annotations/label_map.pbtxt\"\n",
+       " shuffle: false\n",
+       " num_epochs: 1\n",
+       " tf_record_input_reader {\n",
+       "   input_path: \"Tensorflow/workspace/annotations/test.record\"\n",
+       " }\n",
+       " ],\n",
+       " 'eval_input_config': label_map_path: \"Tensorflow/workspace/annotations/label_map.pbtxt\"\n",
+       " shuffle: false\n",
+       " num_epochs: 1\n",
+       " tf_record_input_reader {\n",
+       "   input_path: \"Tensorflow/workspace/annotations/test.record\"\n",
+       " }}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "config"
    ]
@@ -259,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +479,7 @@
     "\n",
     "# Restore checkpoint\n",
     "ckpt = tf.compat.v2.train.Checkpoint(model=detection_model)\n",
-    "ckpt.restore(os.path.join(CHECKPOINT_PATH, 'ckpt-1')).expect_partial()\n",
+    "ckpt.restore(os.path.join(CHECKPOINT_PATH, 'ckpt-6')).expect_partial()\n",
     "\n",
     "@tf.function\n",
     "def detect_fn(image):\n",
@@ -300,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,10 +540,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "water\n",
+      "ok\n",
+      "no\n",
+      "ok\n",
+      "no\n",
+      "ok\n",
+      "thanks\n",
+      "food\n",
+      "no\n",
+      "food\n",
+      "thanks\n",
+      "food\n",
+      "thanks\n",
+      "deaf\n",
+      "no\n",
+      "deaf\n",
+      "no\n",
+      "thanks\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
+    "previous = ''\n",
     "while True: \n",
     "    ret, frame = cap.read()\n",
     "    image_np = np.array(frame)\n",
@@ -373,10 +606,14 @@
     "                use_normalized_coordinates=True,\n",
     "                max_boxes_to_draw=1,\n",
     "                min_score_thresh=.1,\n",
-    "                agnostic_mode=False)\n",
-    "\n",
+    "                agnostic_mode=False\n",
+    "                )\n",
     "    cv2.imshow('object detection',  cv2.resize(image_np_with_detections, (800, 600)))\n",
-    "    \n",
+    "    # if detection score is greater than 0.25 and class name is not == previous classname print the class name\n",
+    "    if detections['detection_scores'][0] > 0.25 and category_index[detections['detection_classes'][0]+label_id_offset]['name'] != previous:\n",
+    "        print(category_index[detections['detection_classes'][0]+label_id_offset]['name'])\n",
+    "        previous = category_index[detections['detection_classes'][0]+label_id_offset]['name']\n",
+    "\n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "        cap.release()\n",
     "        break"
